k8s/Service/ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibra
  labels:
    env: prod 
spec:
  replicas: 3
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      name: nginx
      labels:
        env: prod
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
