k8s/Service/ingress/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: ibra-clusterip
spec:
  type: ClusterIP 
  selector:
    env: prod
  ports:
    - port: 2000
      targetPort: 80
