k8s/Service/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ibra-ingress
spec:
  rules:
    - host: example.com # any application you have 
      http: # you can change if it is HTTPS
        paths:
          - path: /test
            backend:
              service:
                name: ibra-clusterip   #the name of service and its port  cluster ip
                port:
                  number: 2000
            pathType: prefix #may be exact
            
          - path: /prod
            backend:
              service:
                name: mo-clusterip
                port:
                  number: 4000
            pathType: exact

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress-no-third-host
spec:
  rules:
  - host: first.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service1
            port:
              number: 80
  - host: second.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service2
            port:
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service3
            port:
              number: 80
